v2.1: Refine zipping logic and verification